# software-engineering

./: .gitignore  LICENSE  resources.md  vim.md
auction-site/: planning.md  requirements.md
auction-site/auction-client/: pom.xml
auction-site/auction-server/: InitAuction.txt  pom.xml
auction-site/server/: pom.xml
celery/: .gitignore  README.md  requirements.txt
celery/rabbitmq_broker_redis_backend/: Dockerfile.celery-worker  README.md  docker-compose-queue.yaml  docker-compose-worker.yaml  queue_task.py  tasks.py  test_redis.py
celery/redis_broker_redis_backend/: README.md  docker-compose.yaml  tasks.py
celery/time_limit/: celery_worker.py  main.py
cmake/step1/: CMakeLists.txt  tutorial.cxx
cmake/step2/: CMakeLists.txt  tutorial.cxx
cmake/step2/MathFunctions/: MathFunctions.cxx
cmake/step3/: CMakeLists.txt
cmake/step3/MathFunctions/: CMakeLists.txt
docker/: .gitignore  README.md
docker/dockerReact/: Dockerfile  docker-compose-dev.yml
docker/dockerReact/src/: App.js
docker/multiDocker/: .travis.yml  docker-compose.yml
docker/multiDocker/client/: package-lock.json
docker/simpleWeb/: Dockerfile  index.js  package-lock.json  package.json
docker/visits/: index.js  package-lock.json
k8s/: .gitignore
k8s/multik8s/: .travis.yml  coredns-deploy.yaml  deploy.sh  sa.json.enc
k8s/simplek8s/: client-deployment.yaml  client-node-port.yaml  client-pod.yaml
k8s/task-queue/: README.md  env-requirements.txt
k8s/task-queue/redis/: main.py  (+4 more)
maven-tutorial/: pom.xml
rust/: README.md
rust/helloworld/: hello
rust/primitives/: prim  prim.rs
(+56 files in other folders)
